# Lidar-Robot

./: .gitignore  .gitmodules  README.md  check_urdf  index.html  package.json  params.json  server.js  t.xml
CAD Models/: README.md
CAD Models/LIDAR_BOT/: 15mm__studSLDPRT.SLDPRT  Base Plate.SLDPRT  Base Plate1.SLDPRT  Feedback_base.SLDPRT  Lidar.SLDPRT  Lower Clamp.sldprt  MAIN_FEEDBACK.SLDASM  Motor.SLDPRT  Omni Wheel.SLDPRT  Thumbs.db  base_height.SLDPRT  caster_shaft.SLDPRT  circit1.SLDPRT  cutbase.SLDPRT  encoder.SLDPRT  final_base.SLDASM  l_clamp.SLDPRT  lidar_base.SLDPRT  shaft.SLDPRT  sidelink.SLDPRT  sidelink2.SLDPRT  stud15mm.SLDPRT  top_ecoder_holder.SLDPRT  wheel.SLDPRT
CAD Models/LIDAR_BOT/drawings/: Thumbs.db  l_clamp.SLDDRW
CAD/models/: Omni_Whee23l.ply  lidar_base.stl  stud.stl
CAD/solidworks_model/: Feedback_base.SLDPRT  MAIN_FEEDBACK.SLDASM  Motor.SLDPRT  base_caster.SLDPRT  caster_shaft.SLDPRT  circit1.SLDPRT  encoder.SLDPRT  feedback band.SLDPRT  final_base.SLDASM  shaft_motor.SLDASM  sidelink.SLDPRT  stud15mm.SLDPRT  wheel.SLDPRT
Documentation/: ProjectProposal.docx  reportv3.docx  research.md
Documentation/bags/: 2016-07-06-14-17-13.bag  bags.tar.bz2
Documentation/circuits/base_circuit/: base_circuit.brd
Documentation/circuits/top_plate_circuit/: circuit.brd  circuit.sch  eagle.epf
circuits/base_circuit/: .base_circuit.brd.lck  base_circuit.b#1  base_circuit.b#2  base_circuit.brd  base_circuit.s#1  base_circuit.s#2  eagle.epf
circuits/top_plate_design/: top_plate_design.brd
lidar_robot/: CMakeLists.txt  base.launch  bot.launch  package.xml
lidar_robot/firmware/: Adafruit_ADXL345_U.cpp  Adafruit_ADXL345_U.h  BLDCOmni.cpp  BLDCOmni.h  CMakeLists.txt  Design.cpp  Design.h  IMU.cpp  IMU.h  L3G4200D.cpp  MyMotor.cpp  MyMotor.h  firmware.cpp
lidar_robot/msg/: Base_command.msg
lidar_robot/src/: base.cpp  odom_broadcaster.cpp  tf_broadcaster.cpp
models/: original.tar.bz2
models/json/: meshes.json  rplidar.json
models/optimized/: base.stl  feedback.stl  lidar_bottom.stl  motor.stl  rplidar.stl  stud.stl  top_plate.stl  wheel.dae  wheel.stl  wheel2.dae
programming/base/: BLDCOmni.cpp  BLDCOmni.h  MyMotor.cpp  base.ino
programming/initialPrograms/DUE_timers/: DUE_timers.ino
programming/initialPrograms/Serial_Output/: Serial_Output.ino
programming/initialPrograms/adxl/: adxl.ino
programming/initialPrograms/gy-80(10_dof_sensor))/I2C(arduino)/: address_gy-80.txt
programming/initialPrograms/gy-80(10_dof_sensor))/gyro/test1/: test1.ino  test1_output.txt
programming/initialPrograms/schedulers/: schedulers.ino
programming/initialPrograms/sensortest/: sensortest.ino
src/circuits/base_circuit/: base_circuit.sch  eagle.epf
src/circuits/top_plate_circuit/: .v3.sch.lck
src/frontier_exploration/include/frontier_exploration/: ExploreTaskAction.h  ExploreTaskActionFeedback.h  ExploreTaskActionGoal.h  ExploreTaskActionResult.h  ExploreTaskFeedback.h  ExploreTaskGoal.h  ExploreTaskResult.h  Frontier.h  GetNextFrontier.h  GetNextFrontierRequest.h  GetNextFrontierResponse.h  UpdateBoundaryPolygon.h  UpdateBoundaryPolygonRequest.h  UpdateBoundaryPolygonResponse.h
src/frontier_exploration/launch/: global_map.launch
src/hector_navigation/hector_elevation_mapping/src/: hector_elevation_mapping.cpp
src/lidar_robot/: CMakeLists.txt  package.xml  server.launch
src/lidar_robot/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml  hector_costmap.yaml  planner.yaml
src/lidar_robot/extras/: config.rviz  lidar_robot_control.yaml
src/lidar_robot/firmware/: Adafruit_BMP085_U.cpp  Adafruit_BMP085_U.h  Adafruit_HMC5883_U.cpp  Adafruit_HMC5883_U.h  Adafruit_Sensor.h  BLDCOmni.cpp  BLDCOmni.h  IMU.cpp  IMU.h  L3G4200D.cpp  L3G4200D.h  MyMotor.cpp  MyMotor.h  firmware.cpp
src/lidar_robot/launch/: core.launch  exploration.launch  exploration_demo.launch  gazebo.launch  gmapping.launch  hector_slam.launch  lidar_robot.launch  move_base.launch  normal_slam.launch  rviz.launch  state_publishers.launch  web_connectors.launch
src/lidar_robot/meshes/: base.stl  rplidar.stl
src/lidar_robot/models/: base.stl  c_clamp.stl  circuit_plate.stl  lidar_up.stl  motor_shaft.stl  top_plate.stl  untitled.dae
src/lidar_robot/src/: base.cpp  base_controller.cpp  controller.cpp  explorer.cpp  gazebo_driver.cpp  masterStart.cpp  odom_broadcaster.cpp  tf_broadcaster.cpp
src/lidar_robot/worlds/: myworld.world
src/lidar_robot/xacro/: base.rviz.xacro  base.xacro  lidar_robot.gazebo  materials.xacro  robot.xacro
src/lidar_robot/yaml/: costmap_common_params.yaml
webserver/: 3d.html  index.html  map.html  map.js  package.json  server.js  tf.html
webserver/create_ap/: create_ap.conf
webserver/css/: style.css
webserver/js/: easeljs.min.js
