<?xml version="1.0"?>
<package>
  <name>lidar_robot</name>
  <version>0.3.57</version>
  <description>The lidar_robot package</description>

  <maintainer email="ros@todo.todo">Adarsh</maintainer>
  <maintainer email="ros@todo.todo">Darshan</maintainer>
  <maintainer email="ros@todo.todo">Manikanta</maintainer>
  <maintainer email="prajankya@rig.solutions">Prajankya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <export>
  </export>
</package>
